--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -1,11 +1,86 @@
-.container{
-    background-color: #c2b8b8;
+.topText{
     display: flex;
+    height: 4rem;
+    justify-content: space-between;
+    width: 90%;
+    padding: .4rem 1rem;
+}
+.profileInfo{
+    background-color: #b1a9a9;
+    border-radius: 10%;
+    padding: 10px 1rem;
+    width: 450px;
+    height: fit-content;
+}
+.profileInfo a{
+   text-decoration: none; 
+}
+.profile-form-container {
     width: 70%;
-    margin: 10% auto;
-    align-items: center;
-    height: 300px;
-}
-.form{
-    align-items: center;
-}
+    margin: 3rem auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 3px 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+  }
+  
+  .title {
+    margin-bottom: 16px;
+    font-size: 24px;
+  }
+  .inputs{
+    display: flex;
+    justify-content: space-between;
+  }
+  .input-container {
+    margin-bottom: 16px;
+    display: flex;
+  }
+  
+  .label {
+    margin-bottom: 8px;
+    font-weight: bold;
+    width: 70%;
+    
+  }
+  
+  .input {
+    width: 400px;
+    padding: 4px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    position: relative;
+    right: 6rem;
+  }
+  
+  .update-button {
+    background-color: #007bff;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 16px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.2s;
+  }
+  
+  .update-button:hover {
+    background-color: #0056b3;
+    box-shadow: 2px 3px 4px #03264d;
+  }
+  .cancel-button{
+    background-color: #e05757;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 16px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.2s;
+    margin-left: 1rem;
+  }
+  .cancel-button:hover {
+    background-color: #cc3131;
+    box-shadow: 2px 3px 4px #771e1e;
+  }
