--- a/src/pages/Signup.module.css
+++ b/src/pages/Signup.module.css
@@ -51,15 +51,16 @@
   color: black;
   text-align: center;
   background-color: lightblue;
-  height: 3rem;
+  height: 2.5rem;
   width: 25%;
+  padding-bottom: 1rem;
 }
 
 .loginLink a{
   color: #FF6B6B;
   text-decoration: none;
-  font-weight: 600;
-  font-size: 1.2rem;
+  font-weight: 500;
+  font-size: 1.1rem;
   transition: color 0.3s ease-in-out;
 }
 
