--- a/src/components/expenses/ExpenseForm.module.css
+++ b/src/components/expenses/ExpenseForm.module.css
@@ -27,8 +27,7 @@
     border: 1px solid #ccc;
     border-radius: 3px;
   }
-  
-  .expenseForm button {
+  .submitBtn{
     background-color: #007bff;
     color: #fff;
     padding: 8px 12px;
@@ -40,7 +39,9 @@
     height: 2.6rem;
     font-size: 1.5rem;
   }
-  .expenseForm button:hover{
+.submitBtn:hover{
     background-color: #045cb9;
     box-shadow: 3px 4px 5px #01356b;
   }
+
+  
