--- a/src/components/expenses/ExpenseForm.module.css
+++ b/src/components/expenses/ExpenseForm.module.css
@@ -6,12 +6,16 @@
     width: 80%;
     background-color: #f5f5f5;
   }
-  
+  .formHeader{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+  }
   .hidden {
     display: none;
   }
   
-  .expenseForm h2 {
+  .formHeader h2 {
     margin-bottom: 10px;
   }
   
@@ -43,5 +47,54 @@
     background-color: #045cb9;
     box-shadow: 3px 4px 5px #01356b;
   }
-
-  
+  .premiumBtn{
+    background-color: #d8d64c;
+    color: #333;
+    font-weight: 600;
+    margin-top: 1rem;
+    margin-left: 78%;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  .premiumBtn:hover{
+    background-color: #cac71b;
+    box-shadow: 2px 3px 4px #706f17;
+  }
+  .csvBtn{
+    background-color: #3594fa;
+    margin-top: 1rem;
+    margin-left: 68%;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  .csvBtn a{
+    text-decoration: none;
+    color: #fff;
+    font-weight: 600;
+  }
+  .csvBtn:hover{
+    background-color: #096cd6;
+    box-shadow: 2px 3px 4px #023a75;
+  }
+  .themeBtn{
+    display: inline-block;
+    background-color: #62676d;
+    color: #ccc;
+    margin-bottom: 2rem;
+    width: 7rem;
+    height: 2.5rem;
+    padding: 5px 8px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 12px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
