--- a/src/components/expenses/ExpenseForm.module.css
+++ b/src/components/expenses/ExpenseForm.module.css
@@ -3,7 +3,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 80%;
+    width: 90%;
     background-color: #f5f5f5;
   }
   .formHeader{
@@ -59,10 +59,12 @@
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease, color 0.3s ease;
+    opacity:0.8;
   }
   .premiumBtn:hover{
-    background-color: #cac71b;
-    box-shadow: 2px 3px 4px #706f17;
+    background-color: #ece91a;
+    box-shadow: 2px 3px 4px #aaa830;
+    opacity: 1;
   }
   .csvBtn{
     background-color: #3594fa;
@@ -97,4 +99,22 @@
     cursor: pointer;
     font-size: 12px;
     transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  @media (max-width: 600px) {
+    .expenseForm {
+      width: 90%; 
+      margin-left: auto;
+      margin-right: auto;
+    }
+  
+    .formHeader {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .premiumBtn,
+    .csvBtn {
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
