--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -4,6 +4,18 @@
     justify-content: space-between;
     width: 90%;
     padding: .4rem 1rem;
+    
+}
+.quote{
+  background-color: #f8f8f8;
+  border-left: 4px solid #007bff; /* Change color to your preference */
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(121, 119, 119, 0.7);
+  font-size: 1.5rem;
+  color: #333; /* Change color to your preference */
+  margin-bottom: 10px;
 }
 .profileInfo{
     background-color: #b1a9a9;
@@ -21,7 +33,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    box-shadow: 3px 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 2px 4px rgba(32, 32, 32, 0.5);
     background-color: #ffffff;
   }
   
@@ -34,15 +46,15 @@
     justify-content: space-between;
   }
   .input-container {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
     display: flex;
+    align-items: center;
   }
   
   .label {
     margin-bottom: 8px;
     font-weight: bold;
-    width: 70%;
-    
+    width: 70%;   
   }
   
   .input {
@@ -50,8 +62,8 @@
     padding: 4px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    position: relative;
-    right: 6rem;
+    margin-right: 25%;
+    margin-bottom: 1.5%;
   }
   
   .update-button {
@@ -83,4 +95,47 @@
   .cancel-button:hover {
     background-color: #cc3131;
     box-shadow: 2px 3px 4px #771e1e;
+  }
+
+  @media (max-width: 768px) {
+    .topText {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      height: auto;
+      padding: 1rem;
+    }
+  
+    .profileInfo {
+      width: 100%;
+      margin-top: 1rem;
+      text-align: center;
+      padding: 10px;
+    }
+  
+    .profileInfo a {
+      display: block;
+      margin-top: 0.5rem;
+    }
+  
+    .profile-form-container {
+      width: 90%;
+      padding: 20px;
+    }
+  
+    .input-container {
+      flex-direction: column;
+    }
+  
+    .input {
+      width: 100%;
+      position: static;
+      right: 0;
+    }
+  
+    .update-button,
+    .cancel-button {
+      width: 100%;
+      margin-top: 1rem;
+    }
   }
